--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Lavricartaxo</title>
 </head>
 <body>
+    <div>
+        <img src="Images/logo.png" alt="logo">
+    </div>
     
 </body>
 </html>
