--- a/index.html
+++ b/index.html
@@ -4,66 +4,75 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="Css/style.css" type="text/css">
+    <link rel="stylesheet" href="CSS/style.css" type="text/css">
+    <script src="JS/script.js"></script>
     <title>Lavricartaxo</title>
 </head>
 <body>
-        <div class="menu">
-            <div class="menuButtons">
-                <img src="Images/logo.png" alt="logo">               
-            </div>
-            <div class="menuButtons">
-                <p>INICIO</p>
-            </div>
-            <div class="menuButtons">
-                <p>QUEM SOMOS</p>
-            </div>
-            <div class="menuButtons">
-                <p>GALERIA</p>
-            </div>
-            <div class="menuButtons">
-                <p>PRODUTOS</p>
-            </div>
-            <div class="menuButtons">
-                <p>CONTATOS</p>
-            </div>
-            <div class="menuButtons">
-                <p>MARCAS</p>
-            </div>
-            <div class="menuButtons"> 
-                <a href="" class="menuText"><p>ASSOCIADOS</p></a>
-            </div>
+    <div class="top">
+        <div class="logo">
+            <img src="Images/logo.png" alt="logo" width="auto">               
         </div>
-    <p>stuff</p>
-    <p>stuff</p>
-    <p>stuff</p>
-    <p>stuff</p>
-    <p>stuff</p>
-    <p>stuff</p>
-    <p>stuff</p>
-    <p>stuff</p>
-    <p>stuff</p>
-    <p>stuff</p>
-    <p>stuff</p>
-    <p>stuff</p>
-    <p>stuff</p>
-    <p>stuff</p>
-    <p>stuff</p>
-    <p>stuff</p>
-    <p>stuff</p>
-    <p>stuff</p>
-    <p>stuff</p>
-    <p>stuff</p>
-    <p>stuff</p>
-    <p>stuff</p>
-    <p>stuff</p>
-    <p>stuff</p>
-    <p>stuff</p>
-    <p>stuff</p>
-    <p>stuff</p>
-    <p>stuff</p>
-    <p>stuff</p>
-    <p>stuff</p>
-    
+        <div class="weatherWidget">
+            <div id="weatherWidget" >
+                <script type="text/javascript" async src="JS/weatherWidget.js"></script>
+            </div> 
+        </div>               
+    </div>
+    <div id="menu" class="menu">        
+        <div class="menuButtons">
+            <a href="#" class="menuText"><p>INICIO</p></a>
+        </div>
+        <div class="menuButtons">
+            <a href="#WhoWeAre" class="menuText"><p>QUEM SOMOS</p></a>
+        </div>
+        <div class="menuButtons">
+            <a href="#Gallery" class="menuText"><p>GALERIA</p></a>
+        </div>
+        <div class="menuButtons">
+            <a href="#Products" class="menuText"><p>PRODUTOS</p></a>
+        </div>
+        <div class="menuButtons">
+            <a href="#Contacts" class="menuText"><p>CONTATOS</p></a>
+        </div>
+        <div class="menuButtons">
+            <a href="#Brands" class="menuText"><p>MARCAS</p></a>
+        </div>
+        <div class="menuButtons"> 
+            <a href="#Members" class="menuText"><p>ASSOCIADOS</p></a>
+        </div>     
+    </div>
+    <div class="test">
+        <p>stuff</p>
+        <p>stuff</p>
+        <p>stuff</p>
+        <p>stuff</p>
+        <p>stuff</p>
+        <p>stuff</p>
+        <p>stuff</p>
+        <p>stuff</p>
+        <p>stuff</p>
+        <p>stuff</p>
+        <p>stuff</p>
+        <p>stuff</p>
+        <p>stuff</p>
+        <p>stuff</p>
+        <p>stuff</p>
+        <p>stuff</p>
+        <p>stuff</p>
+        <p>stuff</p>
+        <p>stuff</p>
+        <p>stuff</p>
+        <p>stuff</p>
+        <p>stuff</p>
+        <p>stuff</p>
+        <p>stuff</p>
+        <p>stuff</p>
+        <p>stuff</p>
+        <p>stuff</p>
+        <p>stuff</p>
+        <p>stuff</p>
+        <p>stuff</p>
+    </div>
 </body>
 </html>
