--- a/index.html
+++ b/index.html
@@ -2,68 +2,97 @@
 <html lang="pt-pt">
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" type="image/jpg" href="Images/icon.png" />
+    <meta name="keywords" content="Cooperativa agricola do Cartaxo, Vinhas, Vinhos, adubos, agroquimicos, fitofarmacos, sementes, batatas, rações">
+    <meta name="description" content="LAVRICARTAXO Cooperativa agricola do Cartaxo, Vinhas, Vinhos, adubos, agroquimicos, fitofarmacos, sementes, batatas, rações">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="Css/style.css" type="text/css">
+    <link rel="stylesheet" href="CSS/style.css" type="text/css">
+    <script src="JS/script.js"></script>
     <title>Lavricartaxo</title>
 </head>
 <body>
-        <div class="menu">
-            <div class="menuButtons">
-                <img src="Images/logo.png" alt="logo">               
+    <div class="main1">
+        <div class="top">
+            <div class="logo">
+            <a href="index.html"><img src="Images/logo.png" alt="logo" width="auto"></a> 
             </div>
-            <div class="menuButtons">
-                <p>INICIO</p>
-            </div>
-            <div class="menuButtons">
-                <p>QUEM SOMOS</p>
-            </div>
-            <div class="menuButtons">
-                <p>GALERIA</p>
-            </div>
-            <div class="menuButtons">
-                <p>PRODUTOS</p>
-            </div>
-            <div class="menuButtons">
-                <p>CONTATOS</p>
-            </div>
-            <div class="menuButtons">
-                <p>MARCAS</p>
-            </div>
-            <div class="menuButtons"> 
-                <a href="" class="menuText"><p>ASSOCIADOS</p></a>
-            </div>
+            <div class="weatherWidget">
+                <div id="weatherWidget" >
+                    <script type="text/javascript" async src="JS/weatherWidget.js"></script>
+                </div> 
+            </div>               
         </div>
-    <p>stuff</p>
-    <p>stuff</p>
-    <p>stuff</p>
-    <p>stuff</p>
-    <p>stuff</p>
-    <p>stuff</p>
-    <p>stuff</p>
-    <p>stuff</p>
-    <p>stuff</p>
-    <p>stuff</p>
-    <p>stuff</p>
-    <p>stuff</p>
-    <p>stuff</p>
-    <p>stuff</p>
-    <p>stuff</p>
-    <p>stuff</p>
-    <p>stuff</p>
-    <p>stuff</p>
-    <p>stuff</p>
-    <p>stuff</p>
-    <p>stuff</p>
-    <p>stuff</p>
-    <p>stuff</p>
-    <p>stuff</p>
-    <p>stuff</p>
-    <p>stuff</p>
-    <p>stuff</p>
-    <p>stuff</p>
-    <p>stuff</p>
-    <p>stuff</p>
-    
+        <div id="menu" class="menu">
+            <nav>
+                <ul class="nav_menu">
+                    <div class="menuButtons">
+                        <li class="active">
+                            <a href="index.html" class="menuText">INICIO</a>
+                        </li>
+                        <li>
+                            <a href="quemsomos.html" class="menuText">QUEM SOMOS</a>
+                        </li>
+                        <li>
+                            <a href="galeria.html" class="menuText">GALERIA</a>
+                        </li>
+                        <li>
+                            <a href="produtos.html" class="menuText">PRODUTOS</a>
+                        </li>
+                        <li>
+                            <a href="contatos.html" class="menuText">CONTATOS</a>
+                        </li>
+                        <li>
+                            <a href="marcas.html" class="menuText">MARCAS</a>
+                        </li>
+                        <li>
+                            <a href="associados.html" class="menuText">ASSOCIADOS</a>
+                        </li>
+                    </div>     
+                </ul>
+            </nav>
+        </div>
+    </div>
+    <div class="main2">
+        <p>sssss</p>
+        <p>sssss</p>
+        <p>sssss</p>
+        <p>sssss</p>
+        <p>sssss</p>
+        <p>sssss</p>
+        <p>sssss</p>
+        <p>sssss</p>
+        <p>sssss</p>
+        <p>sssss</p>
+        <p>sssss</p>
+        <p>sssss</p>
+        <p>sssss</p>
+        <p>sssss</p>
+        <p>sssss</p>
+        <p>sssss</p>
+        <p>sssss</p>
+        <p>sssss</p>
+        <p>sssss</p>
+        <p>sssss</p>
+        <p>sssss</p>
+        <p>sssss</p>
+        <p>sssss</p>
+        <p>sssss</p>
+        <p>sssss</p>
+        <p>sssss</p>
+        <p>sssss</p>
+        <p>sssss</p>
+        <p>sssss</p>
+        <p>sssss</p>
+        <p>sssss</p>
+        <p>sssss</p>
+        <p>sssss</p>
+        <p>sssss</p>
+        <p>sssss</p>
+        <p>sssss</p>
+        <p>sssss</p>
+        <p>sssss</p>
+        <p>sssss</p>
+    </div>
 </body>
 </html>
