--- a/index.html
+++ b/index.html
@@ -27,27 +27,13 @@
             <nav>
                 <ul class="nav_menu">
                     <div class="menuButtons">
-                        <li class="active">
-                            <a href="index.html" class="menuText">INICIO</a>
-                        </li>
-                        <li>
-                            <a href="quemsomos.html" class="menuText">QUEM SOMOS</a>
-                        </li>
-                        <li>
-                            <a href="galeria.html" class="menuText">GALERIA</a>
-                        </li>
-                        <li>
-                            <a href="produtos.html" class="menuText">PRODUTOS</a>
-                        </li>
-                        <li>
-                            <a href="contatos.html" class="menuText">CONTATOS</a>
-                        </li>
-                        <li>
-                            <a href="marcas.html" class="menuText">MARCAS</a>
-                        </li>
-                        <li>
-                            <a href="associados.html" class="menuText">ASSOCIADOS</a>
-                        </li>
+                        <li class="menuText"><a href="index.html" >INICIO</a></li>
+                        <li class="menuText"><a href="quemsomos.html">QUEM SOMOS</a></li>
+                        <li class="menuText"><a href="galeria.html">GALERIA</a></li>
+                        <li class="menuText"><a href="produtos.html" >PRODUTOS</a></li>
+                        <li class="menuText"><a href="contatos.html" >CONTATOS</a></li>
+                        <li class="menuText"><a href="marcas.html" >MARCAS</a></li>
+                        <li class="menuText"><a href="associados.html" >ASSOCIADOS</a></li>
                     </div>     
                 </ul>
             </nav>
@@ -94,5 +80,29 @@
         <p>sssss</p>
         <p>sssss</p>
     </div>
+    <footer id="footer">
+        <div class="footer-bottom">
+          <div class="container">
+            <div class="row">
+              <div class="col-sm-6">
+                <p>LAVRICARTAXO-Cooperativa Agro-Pecuaria do Cartaxo, C.R.L. </br>Rua Batalhoz nr.81</br>2070-069 Cartaxo</p>
+              </div>
+              <div class="col-sm-6">
+                <p></br>Desenvolvimento e Design: <a href="https://www.analogia.net/?opx=entrar">ANALOGIA.NET</a></p>
+              </div>
+              <div class="col-sm-6">
+                <p>LAVRICARTAXO-Cooperativa Agro-Pecuaria do Cartaxo, C.R.L. </br>Rua Batalhoz nr.81</br>2070-069 Cartaxo</p>
+              </div>
+              <div class="col-sm-6">
+                <p>LAVRICARTAXO-Cooperativa Agro-Pecuaria do Cartaxo, C.R.L. </br>Rua Batalhoz nr.81</br>2070-069 Cartaxo</p>
+              </div>
+              <div class="col-sm-6">
+                  Copyright &copy; 2021 Lavricartaxo-Cooperativa Agro-Pecuária do Cartaxo, C.R.L.
+              </div>
+              
+            </div>
+          </div>
+        </div>
+      </footer>
 </body>
 </html>
