--- a/contatos.html
+++ b/contatos.html
@@ -27,72 +27,95 @@
             <nav>
                 <ul class="nav_menu">
                     <div class="menuButtons">
-                        <li class="active">
-                            <a href="index.html" class="menuText">INICIO</a>
-                        </li>
-                        <li>
-                            <a href="quemsomos.html" class="menuText">QUEM SOMOS</a>
-                        </li>
-                        <li>
-                            <a href="galeria.html" class="menuText">GALERIA</a>
-                        </li>
-                        <li>
-                            <a href="produtos.html" class="menuText">PRODUTOS</a>
-                        </li>
-                        <li>
-                            <a href="contatos.html" class="menuText">CONTATOS</a>
-                        </li>
-                        <li>
-                            <a href="marcas.html" class="menuText">MARCAS</a>
-                        </li>
-                        <li>
-                            <a href="associados.html" class="menuText">ASSOCIADOS</a>
-                        </li>
+                        <li class="menuText"><a href="index.html" >INICIO</a></li>
+                        <li class="menuText"><a href="quemsomos.html">QUEM SOMOS</a></li>
+                        <li class="menuText"><a href="galeria.html">GALERIA</a></li>
+                        <li class="menuText"><a href="produtos.html" >PRODUTOS</a></li>
+                        <li class="menuText"><a href="contatos.html" >CONTATOS</a></li>
+                        <li class="menuText"><a href="marcas.html" >MARCAS</a></li>
+                        <li class="menuText"><a href="associados.html" >ASSOCIADOS</a></li>
                     </div>     
                 </ul>
             </nav>
         </div>
     </div>
-    <div class="main2">
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
+    <div class="mapa">
+        <h2></br>Encontre-nos aqui</h2>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12373.9691393483!2d-8.791160000000001!3d39.163528!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb27463f5a3d96d77!2sLavricartaxo-Cooperativa%20Agro-Pecu%C3%A1ria%20do%20Cartaxo%20C.R.L.!5e0!3m2!1spt-PT!2spt!4v1616068831267!5m2!1spt-PT!2spt" width="600" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
     </div>
+    <div class="col-sm-6">
+        <h2></br>Endereço </h2>
+        <ul class="address">
+            <li><span> Address:</span>Rua Batalhoz, n.? 81 </li>
+            <li><span> Código Postal:</span> 2070-069 Cartaxo Portugal </li>
+            <li><span> Telefone:</span> (351) 243 700 240 </li>
+            <li><span> Fax:</span> (351) 243 700 249</li>
+            <li><span> Email:</span><a href="geral@lavricartaxo.pt"> geral@lavricartaxo.pt</a></li>
+        </ul>                            
+    </div>
+   </section><!--contato-->
+        <section id="contact">
+            <div class="container">
+            <div class="row">
+                <div class="heading text-center col-sm-8 col-sm-offset-2 wow fadeInUp" data-wow-duration="1000ms" data-wow-delay="300ms"></div>
+                    <h2></br>Contacte-nos</h2>
+                </div>
+            </div>
+                <div class="contact-form wow fadeIn" data-wow-duration="1000ms" data-wow-delay="600ms">
+                    <div class="row">
+                        <div class="col-sm-6">
+                            <form id="main-contact-form" name="contact-form" method="post" action="#">
+                            <div class="row  wow fadeInUp" data-wow-duration="1000ms" data-wow-delay="300ms">
+                                <div class="col-sm-6">
+                                    <div class="form-group">
+                                        <input type="text" name="name" class="form-control" placeholder="Nome" required="required">
+                                    </div>
+                                </div>
+                                <div class="col-sm-6">
+                                    <div class="form-group">
+                                        <input type="email" name="email" class="form-control" placeholder="Email" required="required">
+                                    </div>
+                                </div>
+                            </div>
+                                <div class="form-group">
+                                    <input type="text" name="local" class="form-control" placeholder="Local" required="required">
+                                </div>
+                                <div class="form-group">
+                                    <input type="tel" name="number" class="form-control" placeholder="Telefone" required="required">
+                                </div>
+                                <div class="form-group">
+                                    <input type="text" name="assunto" class="form-control" placeholder="Assunto" required="required">
+                                </div>
+                                <div class="form-group">
+                                    <textarea name="message" id="message" class="form-control" rows="4" placeholder="Mensagem" required="required"></textarea>
+                                </div>                        
+                                <div class="form-group">
+                                    <button type="submit" class="btn-submit">Enviar</button>
+                                </div>
+                            </form>   
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>        
+    </section><!--/#contact-->
+    <footer id="footer">
+        <div class="footer-bottom">
+          <div class="container">
+            <div class="row">
+              <div class="col-sm-6">
+                <p>LAVRICARTAXO-Cooperativa Agro-Pecuaria do Cartaxo, C.R.L. </br>Rua Batalhoz nr.81</br>2070-069 Cartaxo</p>
+              </div>
+              <div class="col-sm-6">
+                <p class="pull-right">Desenvolvimento e Design: <a href="https://www.analogia.net/?opx=entrar">ANALOGIA.NET</a></p>
+              </div>
+              <div class="col-sm-6">
+                  Copyright &copy; 2021 Lavricartaxo-Cooperativa Agro-Pecuária do Cartaxo, C.R.L.
+              </div>
+              
+            </div>
+          </div>
+        </div>
+      </footer>
 </body>
 </html>
