--- a/contatos.html
+++ b/contatos.html
@@ -45,12 +45,12 @@
     </div>
     <div class="col-sm-6">
         <h2></br>Endereço </h2>
-        <ul class="address">
-            <li><span> Address:</span>Rua Batalhoz, n.? 81 </li>
-            <li><span> Código Postal:</span> 2070-069 Cartaxo Portugal </li>
-            <li><span> Telefone:</span> (351) 243 700 240 </li>
-            <li><span> Fax:</span> (351) 243 700 249</li>
-            <li><span> Email:</span><a href="geral@lavricartaxo.pt"> geral@lavricartaxo.pt</a></li>
+        <ul class="contact-info">
+            <li class="contact-info"><span> Address:</span>Rua Batalhoz, n.? 81 </li>
+            <li class="contact-info"><span> Código Postal:</span> 2070-069 Cartaxo Portugal </li>
+            <li class="contact-info"><span> Telefone:</span> (351) 243 700 240 </li>
+            <li class="contact-info"><span> Fax:</span> (351) 243 700 249 </li>
+            <li class="contact-info"><span> Email:</span><a href="geral@lavricartaxo.pt" class="contact-info"> geral@lavricartaxo.pt</a></li>
         </ul>                            
     </div>
    </section><!--contato-->
@@ -65,32 +65,28 @@
                     <div class="row">
                         <div class="col-sm-6">
                             <form id="main-contact-form" name="contact-form" method="post" action="#">
-                            <div class="row  wow fadeInUp" data-wow-duration="1000ms" data-wow-delay="300ms">
                                 <div class="col-sm-6">
                                     <div class="form-group">
                                         <input type="text" name="name" class="form-control" placeholder="Nome" required="required">
                                     </div>
-                                </div>
-                                <div class="col-sm-6">
                                     <div class="form-group">
                                         <input type="email" name="email" class="form-control" placeholder="Email" required="required">
                                     </div>
-                                </div>
-                            </div>
-                                <div class="form-group">
-                                    <input type="text" name="local" class="form-control" placeholder="Local" required="required">
-                                </div>
-                                <div class="form-group">
-                                    <input type="tel" name="number" class="form-control" placeholder="Telefone" required="required">
-                                </div>
-                                <div class="form-group">
-                                    <input type="text" name="assunto" class="form-control" placeholder="Assunto" required="required">
-                                </div>
-                                <div class="form-group">
-                                    <textarea name="message" id="message" class="form-control" rows="4" placeholder="Mensagem" required="required"></textarea>
-                                </div>                        
-                                <div class="form-group">
-                                    <button type="submit" class="btn-submit">Enviar</button>
+                                    <div class="form-group">
+                                        <input type="text" name="local" class="form-control" placeholder="Local" required="required">
+                                    </div>
+                                    <div class="form-group">
+                                        <input type="tel" name="number" class="form-control" placeholder="Telefone" required="required">
+                                    </div>
+                                    <div class="form-group">
+                                        <input type="text" name="assunto" class="form-control" placeholder="Assunto" required="required">
+                                    </div>
+                                    <div class="form-group">
+                                        <textarea name="message" id="message" class="form-control" rows="4" placeholder="Mensagem" required="required"></textarea>
+                                    </div>                        
+                                    <div class="form-group">
+                                        <button type="submit" class="btn-submit">Enviar</button>
+                                    </div>
                                 </div>
                             </form>   
                         </div>
@@ -107,12 +103,20 @@
                 <p>LAVRICARTAXO-Cooperativa Agro-Pecuaria do Cartaxo, C.R.L. </br>Rua Batalhoz nr.81</br>2070-069 Cartaxo</p>
               </div>
               <div class="col-sm-6">
-                <p class="pull-right">Desenvolvimento e Design: <a href="https://www.analogia.net/?opx=entrar">ANALOGIA.NET</a></p>
+                <p></br>243 700 240</br></p>
               </div>
               <div class="col-sm-6">
-                  Copyright &copy; 2021 Lavricartaxo-Cooperativa Agro-Pecuária do Cartaxo, C.R.L.
+                <p>243 700 249</br></br></p>
               </div>
-              
+              <div class="col-sm-6">
+                <p>De Segunda a Sexta-feira das 9H ás 13H e das 14.30H ás 18.30H</br>Aos Sábados das 9H ás 12.30H</p>
+              </div>
+              <div class="col-sm-6">
+                </br>Copyright &copy; 2021 Lavricartaxo-Cooperativa Agro-Pecuária do Cartaxo, C.R.L.
+              </div>
+              <div class="col-sm-6" class="footer">
+                <p></br>Desenvolvimento e Design: <a href="https://www.analogia.net/?opx=entrar">ANALOGIA.NET</a></p>
+              </div>
             </div>
           </div>
         </div>
