--- a/index.html
+++ b/index.html
@@ -88,18 +88,20 @@
                 <p>LAVRICARTAXO-Cooperativa Agro-Pecuaria do Cartaxo, C.R.L. </br>Rua Batalhoz nr.81</br>2070-069 Cartaxo</p>
               </div>
               <div class="col-sm-6">
+                <p></br>243 700 240</br></p>
+              </div>
+              <div class="col-sm-6">
+                <p>243 700 249</br></br></p>
+              </div>
+              <div class="col-sm-6">
+                <p>De Segunda a Sexta-feira das 9H ás 13H e das 14.30H ás 18.30H</br>Aos Sábados das 9H ás 12.30H</p>
+              </div>
+              <div class="col-sm-6">
+                </br>Copyright &copy; 2021 Lavricartaxo-Cooperativa Agro-Pecuária do Cartaxo, C.R.L.
+              </div>
+              <div class="col-sm-6" class="footer">
                 <p></br>Desenvolvimento e Design: <a href="https://www.analogia.net/?opx=entrar">ANALOGIA.NET</a></p>
               </div>
-              <div class="col-sm-6">
-                <p>LAVRICARTAXO-Cooperativa Agro-Pecuaria do Cartaxo, C.R.L. </br>Rua Batalhoz nr.81</br>2070-069 Cartaxo</p>
-              </div>
-              <div class="col-sm-6">
-                <p>LAVRICARTAXO-Cooperativa Agro-Pecuaria do Cartaxo, C.R.L. </br>Rua Batalhoz nr.81</br>2070-069 Cartaxo</p>
-              </div>
-              <div class="col-sm-6">
-                  Copyright &copy; 2021 Lavricartaxo-Cooperativa Agro-Pecuária do Cartaxo, C.R.L.
-              </div>
-              
             </div>
           </div>
         </div>
