--- a/index.html
+++ b/index.html
@@ -1,78 +1,204 @@
 <!DOCTYPE html>
 <html lang="pt-pt">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="CSS/style.css" type="text/css">
-    <script src="JS/script.js"></script>
-    <title>Lavricartaxo</title>
+  <meta charset="UTF-8">
+  <link rel="icon" type="image/jpg" href="Images/icon.png" />
+  <meta name="keywords" content="Cooperativa agricola do Cartaxo, Vinhas, Vinhos, adubos, agroquimicos, fitofarmacos, sementes, batatas, rações">
+  <meta name="description" content="LAVRICARTAXO Cooperativa agricola do Cartaxo, Vinhas, Vinhos, adubos, agroquimicos, fitofarmacos, sementes, batatas, rações">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="CSS/style.css" type="text/css">
+  <script src="JS/script.js"></script>
+  <title>Lavricartaxo</title>
 </head>
 <body>
+  <div class="header">
     <div class="top">
-        <div class="logo">
-            <img src="Images/logo.png" alt="logo" width="auto">               
-        </div>
-        <div class="weatherWidget">
-            <div id="weatherWidget" >
-                <script type="text/javascript" async src="JS/weatherWidget.js"></script>
-            </div> 
-        </div>               
+      <div class="logo">
+        <a href="index.html"><img src="Images/logo.png" alt="logo" class="logoIMG"></a> 
+      </div>
+      <div class="weatherWidget">
+        <div id="weatherWidget" >
+          <script type="text/javascript" async src="JS/weatherWidget.js"></script>
+        </div> 
+      </div>               
+    </div>    
+  </div>
+  <nav>
+    <ul class="navMenu">
+      <li class="menuText"><a href="index.html" >INICIO</a></li>
+      <!-- <li class="menuText"><a href="quemsomos.html">QUEM SOMOS</a></li> -->
+      <li class="menuText"><a href="" onclick="click()">QUEM SOMOS</a></li>
+      <li class="menuText"><a href="galeria.html">GALERIA</a></li>
+      <li class="menuText"><a href="produtos.html" >PRODUTOS</a></li>
+      <li class="menuText"><a href="contatos.html" >CONTATOS</a></li>
+      <li class="menuText"><a href="marcas.html" >MARCAS</a></li>
+      <li class="menuText"><a href="associados.html" >ASSOCIADOS</a></li>   
+    </ul>
+  </nav>
+  <div class="main">
+    <div class="slideshow">
+
     </div>
-    <div id="menu" class="menu">        
-        <div class="menuButtons">
-            <a href="#" class="menuText"><p>INICIO</p></a>
-        </div>
-        <div class="menuButtons">
-            <a href="#WhoWeAre" class="menuText"><p>QUEM SOMOS</p></a>
-        </div>
-        <div class="menuButtons">
-            <a href="#Gallery" class="menuText"><p>GALERIA</p></a>
-        </div>
-        <div class="menuButtons">
-            <a href="#Products" class="menuText"><p>PRODUTOS</p></a>
-        </div>
-        <div class="menuButtons">
-            <a href="#Contacts" class="menuText"><p>CONTATOS</p></a>
-        </div>
-        <div class="menuButtons">
-            <a href="#Brands" class="menuText"><p>MARCAS</p></a>
-        </div>
-        <div class="menuButtons"> 
-            <a href="#Members" class="menuText"><p>ASSOCIADOS</p></a>
-        </div>     
+    <div class="news">
+      <script type="text/javascript" src="JS/newsWidget.js?widgettitle=Noticías&amp;categories=126,127,128,129,&amp;showRelease=1&amp;width=300px&amp;headlinebold=1&amp;headlinesonly=0&amp;headlinecolor=2d57a1&amp;briefcolor=666666&amp;textcolor=333333&amp;typeface=arial&amp;fontsize=11&amp;width=300px&amp;headlinesepstyle=dotted&amp;showimages=1&amp;numstories=5&amp;bgcolor=ffffff&amp;urldest=247pr"></script>
     </div>
-    <div class="test">
-        <p>stuff</p>
-        <p>stuff</p>
-        <p>stuff</p>
-        <p>stuff</p>
-        <p>stuff</p>
-        <p>stuff</p>
-        <p>stuff</p>
-        <p>stuff</p>
-        <p>stuff</p>
-        <p>stuff</p>
-        <p>stuff</p>
-        <p>stuff</p>
-        <p>stuff</p>
-        <p>stuff</p>
-        <p>stuff</p>
-        <p>stuff</p>
-        <p>stuff</p>
-        <p>stuff</p>
-        <p>stuff</p>
-        <p>stuff</p>
-        <p>stuff</p>
-        <p>stuff</p>
-        <p>stuff</p>
-        <p>stuff</p>
-        <p>stuff</p>
-        <p>stuff</p>
-        <p>stuff</p>
-        <p>stuff</p>
-        <p>stuff</p>
-        <p>stuff</p>
+    <div class="slideshow">
+      <img src="Images/Slideshowtestimg1.jpg" alt="testimg" id="slideshowIMG" onload="slideShow()" class="slideshowimgs">
     </div>
+    <div class="welcome">
+      <p><br>Seja bem vindo ao nosso site...<br><br>É com enorme prazer que registamos a sua presença no nosso site, esperamos que encontre tudo o que precisa para realizar os seus projectos com sucesso!.<br><br>A LAVRICARTAXO - Cooperativa Agro-Pecuária do Cartaxo, C.R.L.. coloca ao seu dispôr uma vasta equipa para que possa ter todo o apoio que considere necessário.<br><br>O nosso objectivo é servir os nossos clientes com competência e dedicação para que o nosso cliente volte sempre!<br><br>Ao adquirir produtos na nossa empresa deve saber que estará sempre a comprar qualidade ao melhor preço! Volte sempre, será sempre um gosto tê-lo de volta!</p>
+    </div>
+      
+      <p>a</p>
+      <p>a</p>
+      <p>a</p>
+      <p>a</p>
+      <p>a</p>
+      <p>a</p>
+      <p>a</p>
+      <p>a</p>
+      <p>a</p>
+      <p>a</p>
+      <p>a</p>
+      <p>a</p>
+      <p>a</p>
+      <p>a</p>
+      <p>a</p>
+      <p>a</p>
+      <p>a</p>
+      <p>a</p>
+      <p>a</p>
+      <p>a</p>
+      <p>a</p>
+      <p>a</p>
+      <p>a</p>
+      <p>a</p>
+      <p>a</p>
+      <p>a</p>
+      <p>a</p>
+      <p>a</p>
+      <p>a</p>
+      <p>a</p>
+      <p>a</p>
+      <p>a</p>
+      <p>a</p>
+      <p>a</p>
+      <p>a</p>
+      <p>a</p>
+      <p>a</p>
+      <p>a</p>
+      <p>a</p>
+      <p>a</p>
+      <p>a</p>
+      <p>a</p>
+      <p>a</p>
+      <p>a</p>
+      <p>a</p>
+      <p>a</p>
+      <p>a</p>
+      <p>a</p>
+      <p>a</p>
+      <p>a</p>
+      <p>a</p>
+      <p>a</p>
+      <p>a</p>
+      <p>a</p>
+      <p>a</p>
+      <p>a</p>
+      <p>a</p>
+      <p>a</p>
+      <p>a</p>
+      <p>a</p>
+      <p>a</p>
+      <p>a</p>
+      <p>a</p>
+      <p>a</p>
+      <p>a</p>
+      <p>a</p>
+      <p>a</p>
+      <p>a</p>
+      <p>a</p>
+      <p>a</p>
+      <p>a</p>
+      <p>a</p>
+      <p>a</p>
+      <p>a</p>
+      <p>a</p>
+      <p>a</p>
+      <p>a</p>
+      <p>a</p>
+      <p>a</p>
+      <p>a</p>
+      <p>a</p>
+      <p>a</p>
+      <p>a</p>
+      <p>a</p>
+      <p>a</p>
+      <p>a</p>
+      <p>a</p>
+      <p>a</p>
+      <p>a</p>
+      <p>a</p>
+      <p>a</p>
+      <p>a</p>
+      <p>a</p>
+      <p>a</p>
+      <p>a</p>
+      <p>a</p>
+      <p>a</p>
+      <p>a</p>
+      <p>a</p>
+      <p>a</p>
+      <p>a</p>
+      <p>a</p>
+      <p>a</p>
+      <p>a</p>
+      <p>a</p>
+      <p>a</p>
+      <p>a</p>
+      <p>a</p>
+      <p>a</p>
+      <p>a</p>
+      <p>a</p>
+      <p>a</p>
+      <p>a</p>
+      <p>a</p>
+      <p>a</p>
+      <p>a</p>
+      <p>a</p>
+      <p>a</p>
+      <p>a</p>
+      <p>a</p>
+      <p>a</p>
+      <p>a</p>
+      <p>a</p>
+      <p>a</p>
+      <p>a</p>
+  </div>
+  <footer>
+    <div class="footerBottom">
+      <div class="row">
+        <div class="col-sm-6">
+          <p>LAVRICARTAXO-Cooperativa Agro-Pecuaria do Cartaxo, C.R.L.</br>Rua Batalhoz nr.81</br>2070-069 Cartaxo</p>
+        </div>
+        <div class="col-sm-6">
+          <p></br>243 700 240</br></p>
+        </div>
+        <div class="col-sm-6">
+          <p>243 700 249</br></br></p>
+        </div>
+        <div class="col-sm-6">
+          <p>De Segunda a Sexta-feira das 9H ás 13H e das 14.30H ás 18.30H</br>Aos Sábados das 9H ás 12.30H</p>
+        </div>
+        <div class="col-sm-6">
+          </br>Copyright &copy; 2021 Lavricartaxo-Cooperativa Agro-Pecuária do Cartaxo, C.R.L.
+        </div>
+        <div class="col-sm-6" class="footer">
+          <p></br>Desenvolvimento e Design:<a href="https://www.analogia.net/?opx=entrar">ANALOGIA.NET</a></p>
+        </div>
+      </div>
+    </div>
+  </footer>
 </body>
 </html>
