--- a/contatos.html
+++ b/contatos.html
@@ -12,53 +12,52 @@
     <title>Lavricartaxo</title>
 </head>
 <body>
-    <div class="main1">
+    <div class="header">
         <div class="top">
-            <div class="logo">
-            <a href="index.html"><img src="Images/logo.png" alt="logo" width="auto"></a> 
-            </div>
-            <div class="weatherWidget">
-                <div id="weatherWidget" >
-                    <script type="text/javascript" async src="JS/weatherWidget.js"></script>
-                </div> 
-            </div>               
-        </div>
-        <div id="menu" class="menu">
-            <nav>
-                <ul class="nav_menu">
-                    <div class="menuButtons">
-                        <li class="menuText"><a href="index.html" >INICIO</a></li>
-                        <li class="menuText"><a href="quemsomos.html">QUEM SOMOS</a></li>
-                        <li class="menuText"><a href="galeria.html">GALERIA</a></li>
-                        <li class="menuText"><a href="produtos.html" >PRODUTOS</a></li>
-                        <li class="menuText"><a href="contatos.html" >CONTATOS</a></li>
-                        <li class="menuText"><a href="marcas.html" >MARCAS</a></li>
-                        <li class="menuText"><a href="associados.html" >ASSOCIADOS</a></li>
-                    </div>     
-                </ul>
-            </nav>
-        </div>
-    </div>
-    <div class="mapa">
-        <h2></br>Encontre-nos aqui</h2>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12373.9691393483!2d-8.791160000000001!3d39.163528!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb27463f5a3d96d77!2sLavricartaxo-Cooperativa%20Agro-Pecu%C3%A1ria%20do%20Cartaxo%20C.R.L.!5e0!3m2!1spt-PT!2spt!4v1616068831267!5m2!1spt-PT!2spt" width="600" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-    </div>
-    <div class="col-sm-6">
-        <h2></br>Endereço </h2>
-        <ul class="contact-info">
-            <li class="contact-info"><span> Address:</span>Rua Batalhoz, n.? 81 </li>
-            <li class="contact-info"><span> Código Postal:</span> 2070-069 Cartaxo Portugal </li>
-            <li class="contact-info"><span> Telefone:</span> (351) 243 700 240 </li>
-            <li class="contact-info"><span> Fax:</span> (351) 243 700 249 </li>
-            <li class="contact-info"><span> Email:</span><a href="geral@lavricartaxo.pt" class="contact-info"> geral@lavricartaxo.pt</a></li>
-        </ul>                            
-    </div>
+          <div class="logo">
+            <a href="index.html"><img src="Images/logo.png" alt="logo" class="logoIMG"></a> 
+          </div>
+          <div class="weatherWidget">
+            <div id="weatherWidget" >
+              <script type="text/javascript" async src="JS/weatherWidget.js"></script>
+            </div> 
+          </div>               
+        </div>    
+      </div>
+      <nav>
+        <ul class="navMenu">
+          <li class="menuText"><a href="index.html" >INICIO</a></li>
+          <li class="menuText"><a href="quemsomos.html">QUEM SOMOS</a></li>
+          <li class="menuText"><a href="galeria.html">GALERIA</a></li>
+          <li class="menuText"><a href="produtos.html" >PRODUTOS</a></li>
+          <li class="menuText"><a href="contatos.html" >CONTATOS</a></li>
+          <li class="menuText"><a href="marcas.html" >MARCAS</a></li>
+          <li class="menuText"><a href="associados.html" >ASSOCIADOS</a></li>   
+        </ul>
+      </nav>
+  <div class="main">
+      <div class="welcome">
+        <div class="mapa">
+          <h2></br>Encontre-nos aqui</h2>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12373.9691393483!2d-8.791160000000001!3d39.163528!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb27463f5a3d96d77!2sLavricartaxo-Cooperativa%20Agro-Pecu%C3%A1ria%20do%20Cartaxo%20C.R.L.!5e0!3m2!1spt-PT!2spt!4v1616068831267!5m2!1spt-PT!2spt" width="600" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+      </div>
+      <div class="col-sm-6">
+          <h2></br>Endereço </h2>
+          <ul class="contact-info">
+              <li class="contact-info"><span> Address:</span>Rua Batalhoz, n.81 </li></br>
+              <li class="contact-info"><span> Código Postal:</span> 2070-069 Cartaxo Portugal </li></br>
+              <li class="contact-info"><span> Telefone:</span> (351) 243 700 240 </li></br>
+              <li class="contact-info"><span> Fax:</span> (351) 243 700 249 </li></br>
+              <li class="contact-info"><span> Email:</span><a href="geral@lavricartaxo.pt" class="contact-info"> geral@lavricartaxo.pt</a></li>
+          </ul>                            
+      </div>
+ 
    </section><!--contato-->
         <section id="contact">
             <div class="container">
             <div class="row">
                 <div class="heading text-center col-sm-8 col-sm-offset-2 wow fadeInUp" data-wow-duration="1000ms" data-wow-delay="300ms"></div>
-                    <h2></br>Contacte-nos</h2>
+                    <h2></br>Contacte-nos</br></br></h2>
                 </div>
             </div>
                 <div class="contact-form wow fadeIn" data-wow-duration="1000ms" data-wow-delay="600ms">
@@ -93,33 +92,33 @@
                     </div>
                 </div>
             </div>
-        </div>        
-    </section><!--/#contact-->
-    <footer id="footer">
-        <div class="footer-bottom">
-          <div class="container">
-            <div class="row">
-              <div class="col-sm-6">
-                <p>LAVRICARTAXO-Cooperativa Agro-Pecuaria do Cartaxo, C.R.L. </br>Rua Batalhoz nr.81</br>2070-069 Cartaxo</p>
-              </div>
-              <div class="col-sm-6">
-                <p></br>243 700 240</br></p>
-              </div>
-              <div class="col-sm-6">
-                <p>243 700 249</br></br></p>
-              </div>
-              <div class="col-sm-6">
-                <p>De Segunda a Sexta-feira das 9H ás 13H e das 14.30H ás 18.30H</br>Aos Sábados das 9H ás 12.30H</p>
-              </div>
-              <div class="col-sm-6">
-                </br>Copyright &copy; 2021 Lavricartaxo-Cooperativa Agro-Pecuária do Cartaxo, C.R.L.
-              </div>
-              <div class="col-sm-6" class="footer">
-                <p></br>Desenvolvimento e Design: <a href="https://www.analogia.net/?opx=entrar">ANALOGIA.NET</a></p>
-              </div>
-            </div>
-          </div>
         </div>
-      </footer>
+      </div>
+    </div>
+    </section>
+  <footer>
+    <div class="footerBottom">
+      <div class="row">
+        <div class="col-sm-6">
+          <p>LAVRICARTAXO-Cooperativa Agro-Pecuaria do Cartaxo, C.R.L.</br>Rua Batalhoz nr.81</br>2070-069 Cartaxo</p>
+        </div>
+        <div class="col-sm-6">
+          <p></br>243 700 240</br></p>
+        </div>
+        <div class="col-sm-6">
+          <p>243 700 249</br></br></p>
+        </div>
+        <div class="col-sm-6">
+          <p>De Segunda a Sexta-feira das 9H ás 13H e das 14.30H ás 18.30H</br>Aos Sábados das 9H ás 12.30H</p>
+        </div>
+        <div class="col-sm-6">
+          </br>Copyright &copy; 2021 Lavricartaxo-Cooperativa Agro-Pecuária do Cartaxo, C.R.L.
+        </div>
+        <div class="col-sm-6" class="footer">
+          <p></br>Desenvolvimento e Design:<a href="https://www.analogia.net/?opx=entrar">ANALOGIA.NET</a></p>
+        </div>
+      </div>
+    </div>
+  </footer>
 </body>
 </html>
