--- a/produtos.html
+++ b/produtos.html
@@ -12,99 +12,74 @@
     <title>Lavricartaxo</title>
 </head>
 <body>
-    <div class="main1">
-        <div class="top">
-            <div class="logo">
-            <a href="index.html"><img src="Images/logo.png" alt="logo" width="auto"></a> 
-            </div>
-            <div class="weatherWidget">
-                <div id="weatherWidget" >
-                    <script type="text/javascript" async src="JS/weatherWidget.js"></script>
-                </div> 
-            </div>               
+  <div class="header">
+    <div class="top">
+      <div class="logo">
+        <a href="index.html"><img src="Images/logo.png" alt="logo" class="logoIMG"></a> 
+      </div>
+      <div class="weatherWidget">
+        <div id="weatherWidget" >
+          <script type="text/javascript" async src="JS/weatherWidget.js"></script>
+        </div> 
+      </div>               
+    </div>    
+  </div>
+  <nav>
+    <ul class="navMenu">
+      <li class="menuText"><a href="index.html" >INICIO</a></li>
+      <li class="menuText"><a href="quemsomos.html">QUEM SOMOS</a></li>
+      <li class="menuText"><a href="galeria.html">GALERIA</a></li>
+      <li class="menuText"><a href="produtos.html" >PRODUTOS</a></li>
+      <li class="menuText"><a href="contatos.html" >CONTATOS</a></li>
+      <li class="menuText"><a href="marcas.html" >MARCAS</a></li>
+      <li class="menuText"><a href="associados.html" >ASSOCIADOS</a></li>   
+    </ul>
+  </nav>
+  <div class="main">
+    <p>a</p>
+    <p>a</p>
+    <p>a</p>
+    <p>a</p>
+    <p>a</p>
+    <p>a</p>
+    <p>a</p>
+    <p>a</p>
+    <p>a</p>
+    <p>a</p>
+    <p>a</p>
+    <p>a</p>
+    <p>a</p>
+    <p>a</p>
+    <p>a</p>
+    <p>a</p>
+    <p>a</p>
+    <p>a</p>
+    <p>a</p>
+    <p>a</p>
+  </div>
+  <footer>
+    <div class="footerBottom">
+      <div class="row">
+        <div class="col-sm-6">
+          <p>LAVRICARTAXO-Cooperativa Agro-Pecuaria do Cartaxo, C.R.L.</br>Rua Batalhoz nr.81</br>2070-069 Cartaxo</p>
         </div>
-        <div id="menu" class="menu">
-            <nav>
-                <ul class="nav_menu">
-                    <div class="menuButtons">
-                        <li class="menuText"><a href="index.html" >INICIO</a></li>
-                        <li class="menuText"><a href="quemsomos.html">QUEM SOMOS</a></li>
-                        <li class="menuText"><a href="galeria.html">GALERIA</a></li>
-                        <li class="menuText"><a href="produtos.html" >PRODUTOS</a></li>
-                        <li class="menuText"><a href="contatos.html" >CONTATOS</a></li>
-                        <li class="menuText"><a href="marcas.html" >MARCAS</a></li>
-                        <li class="menuText"><a href="associados.html" >ASSOCIADOS</a></li>
-                    </div>     
-                </ul>
-            </nav>
+        <div class="col-sm-6">
+          <p></br>243 700 240</br></p>
         </div>
+        <div class="col-sm-6">
+          <p>243 700 249</br></br></p>
+        </div>
+        <div class="col-sm-6">
+          <p>De Segunda a Sexta-feira das 9H ás 13H e das 14.30H ás 18.30H</br>Aos Sábados das 9H ás 12.30H</p>
+        </div>
+        <div class="col-sm-6">
+          </br>Copyright &copy; 2021 Lavricartaxo-Cooperativa Agro-Pecuária do Cartaxo, C.R.L.
+        </div>
+        <div class="col-sm-6" class="footer">
+          <p></br>Desenvolvimento e Design:<a href="https://www.analogia.net/?opx=entrar">ANALOGIA.NET</a></p>
+        </div>
+      </div>
     </div>
-    <div class="main2">
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-        <p>sssss</p>
-    </div>
-    <footer id="footer">
-        <div class="footer-bottom">
-          <div class="container">
-            <div class="row">
-              <div class="col-sm-6">
-                <p>LAVRICARTAXO-Cooperativa Agro-Pecuaria do Cartaxo, C.R.L. </br>Rua Batalhoz nr.81</br>2070-069 Cartaxo</p>
-              </div>
-              <div class="col-sm-6">
-                <p></br>243 700 240</br></p>
-              </div>
-              <div class="col-sm-6">
-                <p>243 700 249</br></br></p>
-              </div>
-              <div class="col-sm-6">
-                <p>De Segunda a Sexta-feira das 9H ás 13H e das 14.30H ás 18.30H</br>Aos Sábados das 9H ás 12.30H</p>
-              </div>
-              <div class="col-sm-6">
-                </br>Copyright &copy; 2021 Lavricartaxo-Cooperativa Agro-Pecuária do Cartaxo, C.R.L.
-              </div>
-              <div class="col-sm-6" class="footer">
-                <p></br>Desenvolvimento e Design: <a href="https://www.analogia.net/?opx=entrar">ANALOGIA.NET</a></p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </footer>
+  </footer>
 </body>
 </html>
