--- a/index.html
+++ b/index.html
@@ -45,25 +45,95 @@
     <div class="welcome">
       <p><br><h2>Seja bem vindo ao nosso site</h2><br>É com enorme prazer que registamos a sua presença no nosso site, esperamos que encontre tudo o que precisa para realizar os seus projectos com sucesso!.<br><br>A LAVRICARTAXO - Cooperativa Agro-Pecuária do Cartaxo, C.R.L.. coloca ao seu dispôr uma vasta equipa para que possa ter todo o apoio que considere necessário.<br><br>O nosso objectivo é servir os nossos clientes com competência e dedicação para que o nosso cliente volte sempre!<br><br>Ao adquirir produtos na nossa empresa deve saber que estará sempre a comprar qualidade ao melhor preço! Volte sempre, será sempre um gosto tê-lo de volta!</p>
     </div>
-    <main>
-       <div class="marcas">
-      <h2><br>As nossas marcas<br></h2>
-
-    </div>
-    </main>
-   
-      </br>
-      </br>
-      </br>
-      </br>
-      </br>
-      </br>
-    </br>
-  </br>
-  </br>
-  </br>
-  </br>
-  </br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <!--<div>
+         <div class="mainmarcas">
+          <h2><br><br>As nossas marcas<br></h2>
+          <a href="" class="marcas">
+            <div>
+              <img src="Images/marcas/agrolex.png" >
+            </div>
+          </a>
+          <a href="" class="marcas">
+            <div>
+              <img src="Images/marcas/basf.png" >
+            </div>
+          </a>
+          <a href="" class="marcas">
+            <div>
+              <img src="Images/marcas/belchim.png" >
+            </div>
+          </a>
+          <a href="" class="marcas">
+            <div>
+              <img src="Images/marcas/biona.png">
+            </div>
+          </a>
+          <a href="" class="marcas">
+            <div>
+              <img src="Images/marcas/cadubal.png" >
+            </div>
+          </a>
+          <a href="" class="marcas">
+            <div>
+              <img src="Images/marcas/deiba.png" >
+            </div>
+          </a>
+          <a href="" class="marcas">
+            <div>
+              <img src="Images/marcas/einhell.png" >
+            </div>
+          </a>
+          <a href="" class="marcas">
+            <div>
+              <img src="Images/marcas/epagro.png" >
+            </div>
+          </a>
+          <a href="" class="marcas">
+            <div>
+              <img src="Images/marcas/fertiprado.png" >
+            </div>
+          </a>
+          <a href="" class="marcas">
+            <div>
+              <img src="Images/marcas/fito.png">
+            </div>
+          </a>
+          <a href="" class="marcas">
+            <div>
+              <img src="Images/marcas/iqv.png">
+            </div>
+          </a>
+          <a href="" class="marcas">
+            <div>
+              <img src="Images/marcas/lena.png">
+            </div>
+          </a>
+          <a href="" class="marcas">
+            <div>
+              <img src="Images/marcas/nutrofertil.png" >
+            </div>
+          </a>
+          <a href="" class="marcas">
+            <div>
+              <img src="Images/marcas/sirosubs.png" >
+            </div>
+          </a>
+         </div>
+      </div>-->
   </div>
   <footer>
     <div class="footerBottom">
