--- a/galeria.html
+++ b/galeria.html
@@ -37,30 +37,52 @@
   </nav>
   <div class="main">
     <div class="slideshowGaleria">
-      <img src="Images/Slideshowtestimg1.jpg" alt="testimg" id="slideshowIMG" onload="slideShow()" class="slideshowimgs">
+      <img src="Images/slideshow/1.jpg" alt="testimg" id="slideshowIMG" onload="slideShow()" class="slideshowimgs">
     </div>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
   </div>
   <footer>
     <div class="footerBottom">
-      <div class="row">
-        <div class="col-sm-6">
-          <p>LAVRICARTAXO-Cooperativa Agro-Pecuaria do Cartaxo, C.R.L.</br>Rua Batalhoz nr.81</br>2070-069 Cartaxo</p>
-        </div>
-        <div class="col-sm-6">
-          <p></br>243 700 240</br></p>
-        </div>
-        <div class="col-sm-6">
-          <p>243 700 249</br></br></p>
-        </div>
-        <div class="col-sm-6">
-          <p>De Segunda a Sexta-feira das 9H ás 13H e das 14.30H ás 18.30H</br>Aos Sábados das 9H ás 12.30H</p>
-        </div>
-        <div class="col-sm-6">
-          </br>Copyright &copy; 2021 Lavricartaxo-Cooperativa Agro-Pecuária do Cartaxo, C.R.L.
-        </div>
-        <div class="col-sm-6" class="footer">
-          <p></br>Desenvolvimento e Design:<a href="https://www.analogia.net/?opx=entrar">ANALOGIA.NET</a></p>
-        </div>
+      <div class="wheretofindusFooter">
+        <p>ONDE NOS ENCONTRAR:<br><br>Rua Batalhoz nr.81<br>2070-069 Cartaxo</p>
+      </div>
+      <div class="contactusFooter">
+        <p>CONTACTE-NOS<br><br>700 240<br>243 700 249</p>
+      </div>
+      <div class="openFooter">
+        <p>ABERTOS:<br><br>De Segunda a Sexta-feira das 9H ás 13H e das 14.30H ás 18.30H</br>Aos Sábados das 9H ás 12.30H</p>
+      </div>
+      <div class="endFooter">
+        <br><br><br><br><br><br>
+        <p>Copyright &copy; 2021 Lavricartaxo-Cooperativa Agro-Pecuária do Cartaxo, C.R.L.</p>
+      </div>
+      <div class="endFooterI">
+        <p>Desenvolvimento e Design:<a href="https://www.analogia.net/?opx=entrar">ANALOGIA.NET</a></p>
       </div>
     </div>
   </footer>
