--- a/quemsomos.html
+++ b/quemsomos.html
@@ -16,12 +16,7 @@
     <div class="top">
       <div class="logo">
         <a href="index.html"><img src="Images/logo.png" alt="logo" class="logoIMG"></a> 
-      </div>
-      <div class="weatherWidget">
-        <div id="weatherWidget" >
-          <script type="text/javascript" async src="JS/weatherWidget.js"></script>
-        </div> 
-      </div>               
+      </div>            
     </div>    
   </div>
   <nav>
@@ -35,35 +30,34 @@
       <li class="menuText"><a href="associados.html" >ASSOCIADOS</a></li>   
     </ul>
   </nav>
-  <div class="welcome">
-    </br><h1>Quem Somos</h1>
-    </br>Constituída em 1982 e sediada na cidade do Cartaxo, a LAVRICARTAXO - Cooperativa Agro-Pecuária do Cartaxo, C.R.L. (antigo Grémio da Lavoura) é uma entidade com estatuto jurídico de cooperativa agrícola, composta por vários associados que procuraram criar uma estrutura forte e competitiva no sector da comercialização de produtos para a agricultura.
-    </br></br>Apresentamos soluções para uma vasta franja do sector, nomeadamente: Adubos, Agro-Químicos, Produtos Fitofarmacêuticos, Rações, Máquinas, entre outros.
-    </br></br>Na LAVRICARTAXO damos uma atenção especial à vitivinicultura, para o efeito apostamos em serviços com formação, informação e qualidade para apoiar qualquer exploração no desenvolvimento dessa actividade, tão importante para a nossa zona e país. 
-    </br></br>Sendo uma cooperativa agrícola, somos uma instituição transparente e organizada, numa estrutura com três órgãos sociais clássicos e independentes, Assembleia Geral, Direcção e Conselho Fiscal, que garantem o correcto funcionamento da instituição.
-    </br></br>Consulte-nos ou visite-nos e comprove a qualidade dos nossos serviços e produtos! Estamos sempre ao dispôr dos nossos associados, fornecedores e clientes para juntos construírmos uma agricultura melhor, mais produtiva e competitiva!</br></br>
+  <div class="main">
+    <div class="whoweare">
+      </br><h1>Quem Somos</h1>
+      </br>Constituída em 1982 e sediada na cidade do Cartaxo, a LAVRICARTAXO - Cooperativa Agro-Pecuária do Cartaxo, C.R.L. (antigo Grémio da Lavoura) é uma entidade com estatuto jurídico de cooperativa agrícola, composta por vários associados que procuraram criar uma estrutura forte e competitiva no sector da comercialização de produtos para a agricultura.
+      </br></br>Apresentamos soluções para uma vasta franja do sector, nomeadamente: Adubos, Agro-Químicos, Produtos Fitofarmacêuticos, Rações, Máquinas, entre outros.
+      </br></br>Na LAVRICARTAXO damos uma atenção especial à vitivinicultura, para o efeito apostamos em serviços com formação, informação e qualidade para apoiar qualquer exploração no desenvolvimento dessa actividade, tão importante para a nossa zona e país. 
+      </br></br>Sendo uma cooperativa agrícola, somos uma instituição transparente e organizada, numa estrutura com três órgãos sociais clássicos e independentes, Assembleia Geral, Direcção e Conselho Fiscal, que garantem o correcto funcionamento da instituição.
+      </br></br>Consulte-nos ou visite-nos e comprove a qualidade dos nossos serviços e produtos! Estamos sempre ao dispôr dos nossos associados, fornecedores e clientes para juntos construírmos uma agricultura melhor, mais produtiva e competitiva!</br></br>
+    </div>
   </div>
+  
   <footer>
     <div class="footerBottom">
-      <div class="row">
-        <div class="col-sm-6">
-          <p>LAVRICARTAXO-Cooperativa Agro-Pecuaria do Cartaxo, C.R.L.</br>Rua Batalhoz nr.81</br>2070-069 Cartaxo</p>
-        </div>
-        <div class="col-sm-6">
-          <p></br>243 700 240</br></p>
-        </div>
-        <div class="col-sm-6">
-          <p>243 700 249</br></br></p>
-        </div>
-        <div class="col-sm-6">
-          <p>De Segunda a Sexta-feira das 9H ás 13H e das 14.30H ás 18.30H</br>Aos Sábados das 9H ás 12.30H</p>
-        </div>
-        <div class="col-sm-6">
-          </br>Copyright &copy; 2021 Lavricartaxo-Cooperativa Agro-Pecuária do Cartaxo, C.R.L.
-        </div>
-        <div class="col-sm-6" class="footer">
-          <p></br>Desenvolvimento e Design:<a href="https://www.analogia.net/?opx=entrar">ANALOGIA.NET</a></p>
-        </div>
+      <div class="wheretofindusFooter">
+        <p>ONDE NOS ENCONTRAR:<br><br>Rua Batalhoz nr.81<br>2070-069 Cartaxo</p>
+      </div>
+      <div class="contactusFooter">
+        <p>CONTACTE-NOS<br><br>700 240<br>243 700 249</p>
+      </div>
+      <div class="openFooter">
+        <p>ABERTOS:<br><br>De Segunda a Sexta-feira das 9H ás 13H e das 14.30H ás 18.30H</br>Aos Sábados das 9H ás 12.30H</p>
+      </div>
+      <div class="endFooter">
+        <br><br><br><br><br><br>
+        <p>Copyright &copy; 2021 Lavricartaxo-Cooperativa Agro-Pecuária do Cartaxo, C.R.L.</p>
+      </div>
+      <div class="endFooterI">
+        <p>Desenvolvimento e Design:<a href="https://www.analogia.net/?opx=entrar">ANALOGIA.NET</a></p>
       </div>
     </div>
   </footer>
