--- a/index.html
+++ b/index.html
@@ -40,11 +40,23 @@
       <script type="text/javascript" src="JS/newsWidget.js?widgettitle=Noticías&amp;categories=126,127,128,129,&amp;showRelease=1&amp;width=300px&amp;headlinebold=1&amp;headlinesonly=0&amp;headlinecolor=2d57a1&amp;briefcolor=666666&amp;textcolor=333333&amp;typeface=arial&amp;fontsize=11&amp;width=300px&amp;headlinesepstyle=dotted&amp;showimages=1&amp;numstories=5&amp;bgcolor=ffffff&amp;urldest=247pr "></script>
     </div>
     <div class="slideshow">
-      <img src="Images/Slideshowtestimg1.jpg" alt="testimg" id="slideshowIMG" onload="slideShow()" class="slideshowimgs">
+      <img src="Images/slideshow/1.jpg" id="slideshowIMG" onload="setTimeout(slideShow(),3000)" class="slideshowimgs">
     </div>
     <div class="welcome">
       <p><br><h2>Seja bem vindo ao nosso site</h2><br>É com enorme prazer que registamos a sua presença no nosso site, esperamos que encontre tudo o que precisa para realizar os seus projectos com sucesso!.<br><br>A LAVRICARTAXO - Cooperativa Agro-Pecuária do Cartaxo, C.R.L.. coloca ao seu dispôr uma vasta equipa para que possa ter todo o apoio que considere necessário.<br><br>O nosso objectivo é servir os nossos clientes com competência e dedicação para que o nosso cliente volte sempre!<br><br>Ao adquirir produtos na nossa empresa deve saber que estará sempre a comprar qualidade ao melhor preço! Volte sempre, será sempre um gosto tê-lo de volta!</p>
     </div>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
     <br>
     <br>
     <br>
@@ -135,29 +147,19 @@
          </div>
       </div>-->
   </div>
-  <footer>
-    <div class="footerBottom">
-      <div class="row">
-        <div class="col-sm-6">
-          <p>LAVRICARTAXO-Cooperativa Agro-Pecuaria do Cartaxo, C.R.L.</br>Rua Batalhoz nr.81</br>2070-069 Cartaxo</p>
-        </div>
-        <div class="col-sm-6">
-          <p></br>243 700 240</br></p>
-        </div>
-        <div class="col-sm-6">
-          <p>243 700 249</br></br></p>
-        </div>
-        <div class="col-sm-6">
-          <p>De Segunda a Sexta-feira das 9H ás 13H e das 14.30H ás 18.30H</br>Aos Sábados das 9H ás 12.30H</p>
-        </div>
-        <div class="col-sm-6">
-          </br>Copyright &copy; 2021 Lavricartaxo-Cooperativa Agro-Pecuária do Cartaxo, C.R.L.
-        </div>
-        <div class="col-sm-6" class="footer">
-          <p></br>Desenvolvimento e Design:<a href="https://www.analogia.net/?opx=entrar">ANALOGIA.NET</a></p>
-        </div>
+  <footer class="footerBottom">
+      <div class="wheretofindusFooter">
+        <p>ONDE NOS ENCONTRAR:<br><br>Rua Batalhoz nr.81<br>2070-069 Cartaxo</p>
       </div>
-    </div>
+      <div class="contactusFooter">
+        <p>CONTACTE-NOS<br><br>700 240<br>243 700 249</p>
+      </div>
+      <div class="openFooter">
+        <p>ABERTOS:<br><br>De Segunda a Sexta-feira das 9H ás 13H e das 14.30H ás 18.30H</br>Aos Sábados das 9H ás 12.30H</p>
+      </div>
+        <br><br><br><br><br><br>
+        <p>Copyright &copy; 2021 Lavricartaxo-Cooperativa Agro-Pecuária do Cartaxo, C.R.L.</p>
+        <p>Desenvolvimento e Design:<a href="https://www.analogia.net/?opx=entrar">ANALOGIA.NET</a></p>
   </footer>
 </body>
 </html>
